# trivis

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  README2.md  build.bash  setup.bash
conda/: datatable.yml  trivis.yml  trivis_boost.yml  trivis_boost_cairo.yml  trivis_boost_cairo_cgal.yml  trivis_boost_cairo_python.yml  trivis_with_boost_cairo_cgal.yml
data/maps/: .gitignore  potholes.txt
examples/: CMakeLists.txt  pathfinder.cc  sandbox.cc  vis_2point.cc  vis_graph.cc  vis_graph_old.cc  vis_map_vertices.cc  vis_map_vertices_old.cc  vis_region.cc  vis_region_old.cc  vis_two_points.cc  vis_vertices.cc
mesh_optim/: CMakeLists.txt  evaluate_mesh.cc  generate_meshes.cc
mesh_optim/experiments/: run_experiments_all.bash  run_experiments_assumptions1_time.py  run_experiments_assumptions2_weights.py  run_experiments_assumptions_all.bash  run_experiments_main1_tea.py  run_experiments_main2_dtea.py  run_experiments_main_all.bash  run_experiments_tuning1_sample_dist.py  run_experiments_tuning2_mwt.py  run_experiments_tuning3_mwt2.py  run_experiments_tuning4_weights.py  run_experiments_tuning_all.bash
mesh_optim/include/mesh_optim/: mesh_weights.h  min_weight_triangulation.h  triangular_meshes.h
mesh_optim/results/: process1.py  process1_main_all.bash  process1_tuning_all.bash  process2_main1_tea.py  process2_main2_dtea.py  process2_main_all.bash  process2_tuning1_sample_dist.py  process2_tuning2_mwt.py  process2_tuning3_mwt2.py  process2_tuning4_weights.py  process2_tuning_all.bash  process_all.bash  process_assumptions1_time.py  process_assumptions2_weights.py  process_assumptions_all.bash
mesh_optim/src/mesh_optim/: CMakeLists.txt  mesh_weights.cc  min_weight_triangulation.cc  triangular_meshes.cc
performance/: CMakeLists.txt  eval_all.bash  eval_method.cc  evaluate_method.cc  evaluate_method_all.bash  gen_inst.cc  gen_inst_all.bash  gen_points.cc  gen_points_all.bash  maps-simple.txt  maps.txt  point_sets.txt  points_types.txt  test_all.bash  test_cgal.cc  test_trivis.cc  test_visilibity.cc
performance/lib/: CMakeLists.txt
performance/lib/VisiLibity1/: CMakeLists.txt  TRIVIS_AUTHORS_NOTICE.md
performance/lib/VisiLibity1/src/: CMakeLists.txt  visilibity.cpp
performance/results/: authors_results.csv  process1.py
trivis/: CMakeLists.txt
trivis/include/trivis/: trivis.h  vis_regions.h  visibility_regions.h
trivis/include/trivis/bucketing/: bucketing.h  grid.h
trivis/include/trivis/geom/: generic_geom_types.h  generic_geom_utils.h  geom_types.h  intersections.h  poly_map.h  robust_geometry.h
trivis/include/trivis/mesh/: cdt.h  constrained_delaunay.h  tri_mesh.h
trivis/include/trivis/pl/: grid.h  point_location.h
trivis/include/trivis/utils/: clipper_geom.h  clipper_utils.h  generic_utils.h  random_points.h  simple_clock.h
trivis/lib/: CMakeLists.txt
trivis/lib/clipper2/: CMakeLists.txt  TRIVIS_AUTHORS_NOTICE.md
trivis/lib/clipper2/include/clipper2/: clipper.h  clipper.h.diff  clipper.rectclip.h.diff
trivis/lib/clipper2/src/clipper2/: CMakeLists.txt  clipper.rectclip.cpp  clipper.rectclip.cpp.diff
trivis/lib/robust-predicate/: CMakeLists.txt  TRIVIS_AUTHORS_NOTICE.md
trivis/lib/triangle/: CMakeLists.txt  TRIVIS_AUTHORS_NOTICE.md
trivis/lib/triangle/include/triangle/: triangle.h
trivis/lib/triangle/src/triangle/: CMakeLists.txt  triangle.c  triangle.c.diff
trivis/src/trivis/: CMakeLists.txt  trivis.cc  vis_regions.cc  visibility_regions.cc
trivis/src/trivis/bucketing/: bucketing.cc  grid.cc
trivis/src/trivis/geom/: intersections.cc  poly_map.cc  robust_geometry.cc
trivis/src/trivis/mesh/: cdt.cc  constrained_delaunay.cc  tri_mesh.cc
trivis/src/trivis/pl/: point_location.cc
trivis/src/trivis/utils/: clipper_geom.cc  clipper_utils.cc  random_points.cc
trivis_pathfinder/: CMakeLists.txt
trivis_pathfinder/include/trivis_pathfinder/: astar.h  boost_graph.h  dijkstra.h  status.h  trivis_pathfinder.h  utils.h  visibility_planner.h
trivis_pathfinder/include/trivis_pathfinder/algorithms/: astar.h  boost_graph.h  dijkstra.h  visibility_planner.h
trivis_pathfinder/include/trivis_pathfinder/utils/: status.h  utils.h
trivis_pathfinder/src/trivis_pathfinder/: CMakeLists.txt  astar.cc  boost_graph.cc  dijkstra.cc  trivis_pathfinder.cc  utils.cc  visibility_planner.cc
trivis_pathfinder/src/trivis_pathfinder/algorithms/: astar.cc  boost_graph.cc  dijkstra.cc  visibility_planner.cc
trivis_pathfinder/src/trivis_pathfinder/utils/: utils.cc
trivis_plus/: CMakeLists.txt
trivis_plus/include/trivis_plus/: trivis_plus.h
trivis_plus/include/trivis_plus/data_loading/: load_map.h  load_mesh.h  load_vis_region.h  load_visibility_region.h
trivis_plus/include/trivis_plus/drawing/: cairo_geom_drawer.h  colors.h  drawing.h  fancy_drawing.h  random_colors.h
trivis_plus/include/trivis_plus/utils/: log.h  ptree_json.h
trivis_plus/src/trivis_plus/: CMakeLists.txt
trivis_plus/src/trivis_plus/data_loading/: load_map.cc  load_mesh.cc  load_vis_region.cc  load_visibility_region.cc
trivis_plus/src/trivis_plus/drawing/: drawing.cc  fancy_drawing.cc  random_colors.cc
trivis_plus/src/trivis_plus/utils/: log.cc  ptree_json.cc
